feat: integrated mobile app with backend and add app notification